tests/diagnostic_golden_cc/semantic_interface_arity.diag
error[CF3170]: Missing actual argument
  --> tests/diagnostic_golden_cc/semantic_interface_arity.f:8:7
   = stage: semantic
   = help: see docs/errors.md#CF3170
  |
8 |       X=F(1)
  |       ^ call site conflicts here
  ::: tests/diagnostic_golden_cc\semantic_interface_arity.f
  |
3 |       INTEGER FUNCTION F(A,B)
  |       ~~~~~~~~~~~~~~~~~ visible interface here
   = note: This diagnostic comes from the semantic procedure-call matcher, not from parser recovery.
   = help: Compare the visible procedure interface against the actual argument list and procedure kind.
